Add MHD 2D results for linear model.

--- a/Burgers/ROM-New-Shift-Approach-Burgers-Eq-Quadratic-Form.ipynb
+++ b/Burgers/ROM-New-Shift-Approach-Burgers-Eq-Quadratic-Form.ipynb
@@ -12,6 +12,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1666a720",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/oissan/PycharmProjects/Space-Weather-ROM'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(\"../\")\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "id": "0b8c9498",
    "metadata": {},
