--- a/Burgers/Burgers-Eq-ROM-Shifted.ipynb
+++ b/Burgers/Burgers-Eq-ROM-Shifted.ipynb
@@ -13,6 +13,29 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7343b163",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/oissan/PycharmProjects/Space-Weather-ROM'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(\"../\")\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0b8c9498",
    "metadata": {},
    "outputs": [],
