Update cross-correlation to be 2D for MHD results.

--- a/Burgers/ROM-New-Shift-Approach-Burgers-Eq-Quadratic-Form.ipynb
+++ b/Burgers/ROM-New-Shift-Approach-Burgers-Eq-Quadratic-Form.ipynb
@@ -146,12 +146,12 @@
     "\n",
     "We can describe the dynamics on the shifted spatial coordinate by the following transformation:\n",
     "\n",
-    "$\\tilde{x}(x, t) = x + ct$ where $c \\in \\mathbb{R}$ is a constant. \n",
+    "$\\tilde{x}(x, t) = x + c(t)$ where $c \\in \\mathbb{R}$ is a constant. \n",
     "\n",
     "Then, by the chain rule, \n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{\\partial u}{\\partial t} = \\frac{\\partial u}{\\partial t}\\frac{\\partial t}{\\partial t} + \\frac{\\partial u}{\\partial \\tilde{x}}\\frac{\\partial \\tilde{x}}{\\partial t} = \\frac{\\partial u}{\\partial t} + c \\frac{\\partial u}{\\partial \\tilde{x}}\n",
+    "\\frac{\\partial u}{\\partial t} = \\frac{\\partial u}{\\partial t}\\frac{\\partial t}{\\partial t} + \\frac{\\partial u}{\\partial \\tilde{x}}\\frac{\\partial \\tilde{x}}{\\partial t} = \\frac{\\partial u}{\\partial t} + c'(t) \\frac{\\partial u}{\\partial \\tilde{x}}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
@@ -162,24 +162,24 @@
     "\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{\\partial u}{\\partial t} + (u + c) \\frac{\\partial u}{\\partial x} = 0\n",
+    "\\frac{\\partial u}{\\partial t} + (u + c'(t)) \\frac{\\partial u}{\\partial x} = 0\n",
     "\\end{equation}\n",
     "\n",
     "which can be written in conservative form as\n",
     "\\begin{equation}\n",
-    "\\frac{\\partial u}{\\partial t} +  \\frac{\\partial}{\\partial x}(\\frac{1}{2}u^2 + cu) = 0\n",
+    "\\frac{\\partial u}{\\partial t} +  \\frac{\\partial}{\\partial x}(\\frac{1}{2}u^2 + c'(t)u) = 0\n",
     "\\end{equation}\n",
     "\n",
     "Then, by the conservative upwind scheme, we can solve the shifted equation numerically, where in vector form:\n",
     "\n",
     "\\begin{equation} \\label{fom-vector-form}\n",
-    "\\dot{\\mathbf{u}} = -\\frac{\\Delta t}{2\\Delta x}\\mathbf{A} (\\mathbf{u} \\otimes \\mathbf{u}) -c\\frac{\\Delta t}{\\Delta x}\\mathbf{A} \\mathbf{u} \n",
+    "\\dot{\\mathbf{u}} = -\\frac{1}{2\\Delta x}\\mathbf{A} (\\mathbf{u} \\otimes \\mathbf{u}) -c'(t)\\frac{1}{\\Delta x}\\mathbf{A} \\mathbf{u} \n",
     "\\end{equation}\n",
     "\n",
     "where \n",
     "\n",
     "\\begin{equation} \\label{A-matrix}\n",
-    "    \\mathbf{A} = \\frac{\\Omega_{\\text{rot}}}{\\Delta \\phi}\n",
+    "    \\mathbf{A} = \n",
     "    \\left[\n",
     "    \\begin{array}{ccccc}\n",
     "        -1 & 1 & & & \\\\\n",
@@ -190,7 +190,7 @@
     "    \\end{array}\n",
     "    \\right] \\in\\mathbb{R}^{n\\times n},\n",
     "    \\ \n",
-    "    \\mathbf{v}(r_{0})  \\in\\mathbb{R}^{n}.\n",
+    "    \\mathbf{u}_{0}  \\in\\mathbb{R}^{n}.\n",
     "\\end{equation}\n"
    ]
   },
