remove thermospheric density results from GitHub.

--- a/CrossCorrelation/Cross-Correlation.ipynb
+++ b/CrossCorrelation/Cross-Correlation.ipynb
@@ -15,9 +15,7 @@
    "id": "78b3282e",
    "metadata": {},
    "source": [
-    "# Background\n",
-    "\n",
-    "## Definition \n",
+    "### Background\n",
     "Cross-correlation is a mathematical operation that is commonly used in signal processing and pattern recognition to measure similarity of two functions as they are displaced from one another. For two finite discrete signals $f, g \\in \\mathbb{C}^{n}$, the uni-variate discrete *circular cross-correlation* ($\\star$) is defined as\n",
     "\n",
     "\\begin{equation}\\label{cc-dis-circular-definition}\n",
@@ -34,13 +32,13 @@
     "where $\\overline{\\tau}= [\\tau_{1}, \\tau_{2},... ,\\tau_{k}] \\in \\mathbb{Z}^{k}$ is the multi-variate discrete displacement. The optimal shift between the two discrete signals, $\\bar{\\tau}^{*}$, is found by the maximum of the cross-correlation, such that\n",
     "\n",
     "\\begin{equation}\\label{cc-max}\n",
-    "    \\bar{\\tau}^{*} = {argmax_{\\bar{\\tau} \\in \\mathbb{Z}^{k}}} {(f \\star \\overset {k}{\\cdots } \\star g)[\\overline{\\tau}]}\n",
+    "    \\bar{\\tau}^{*} = {\\text{argmax}_{\\bar{\\tau} \\in \\mathbb{Z}^{k}}} {(f \\star \\overset {k}{\\cdots } \\star g)[\\overline{\\tau}]}\n",
     "\\end{equation}\n",
     "\n",
     "Once the optimal cross-correlation is found for all training snapshots by applying circular discrete cross-correlation between each snapshot and the initial condition, the shift function $\\mathbf{c}(t)$ is found via polynomial curve fitting between the time increments $\\left[t_{0}, t_{1}, ..., t_{f} \\right]$ and corresponding optimal shift $\\left[\\tau^{\\star}_{0}, \\tau^{\\star}_{1}, ..., \\tau^{\\star}_{f} \\right]$.  The wave speed at the testing regime is approximated by extrapolating $\\mathbf{c}(t)$ beyond the training regime. \n",
     "\n",
     "### Motivation to use to find spatial shifting in convective-dominated problems\n",
-    "When the functions align/correlate, the value of $(f \\ast g)$ is maximized. This is because when peaks (positive areas) are aligned, they make a large contribution to the integral. Similarly, when troughs (negative areas) align, they also make a positive contribution to the integral because the product of two negative numbers is positive.\n",
+    "When the functions correlate, the value of $(f \\ast g)$ is maximized. This is because when peaks and troughs align, they make a positive contribution to the finite sum.\n",
     "\n",
     "### Circular convolution theorem and cross-correlation theorem\n",
     "Given sequences $x$ and $y_{N}$, where $y_{N}$ is N-periodic, then the cross-correlation of $x$ and $y_{N}$ is given by \n",
@@ -56,7 +54,7 @@
    "id": "985cd331",
    "metadata": {},
    "source": [
-    "#### Circular-CC applied to: \n",
+    "### In this notebook, we apply the circular discrete cross-correlation to: \n",
     "1. MHD 1D SLICES. $\\checkmark$\n",
     "2. MHD 2D SLICES. $\\checkmark$\n",
     "3. HUX 1D SLICES. (A comparison of technqiues) $\\checkmark$"
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "0f6df155",
    "metadata": {},
    "outputs": [],
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "a358fa5f",
    "metadata": {},
    "outputs": [
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "b1f39530",
    "metadata": {},
    "outputs": [],
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "1998ab59",
    "metadata": {},
    "outputs": [],
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "cd4ce4f3",
    "metadata": {},
    "outputs": [],
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "a3c2d206",
    "metadata": {},
    "outputs": [
@@ -380,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "928e9e06",
    "metadata": {},
    "outputs": [],
@@ -401,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "bdfb9219",
    "metadata": {},
    "outputs": [],
@@ -412,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "081fb70d",
    "metadata": {},
    "outputs": [
@@ -482,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "e095d244",
    "metadata": {},
    "outputs": [],
@@ -498,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "3ad54ebe",
    "metadata": {},
    "outputs": [
@@ -536,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "b73b083a",
    "metadata": {},
    "outputs": [],
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "3355b424",
    "metadata": {},
    "outputs": [],
@@ -583,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "03b7948f",
    "metadata": {},
    "outputs": [
@@ -614,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 23,
    "id": "3154bb38",
    "metadata": {},
    "outputs": [],
@@ -625,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "id": "4828ceba",
    "metadata": {},
    "outputs": [],
@@ -640,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "7243fdd3",
+   "execution_count": 25,
+   "id": "a97799a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 26,
    "id": "6b03ea15",
    "metadata": {},
    "outputs": [],
@@ -666,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "325a7c8b",
+   "execution_count": 27,
+   "id": "dca0cf80",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +674,7 @@
        "(129, 111)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,8 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "f9052f6f",
+   "execution_count": 28,
+   "id": "d7df3c6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,8 +695,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "61828eef",
+   "execution_count": 29,
+   "id": "054857aa",
    "metadata": {},
    "outputs": [
     {
@@ -710,13 +708,13 @@
     }
    ],
    "source": [
-    "print(t[indices[1][0]])"
+    "print(\"latitude shift = \", t[indices[1][0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "756a368a",
+   "execution_count": 30,
+   "id": "418f8211",
    "metadata": {},
    "outputs": [
     {
@@ -728,12 +726,12 @@
     }
    ],
    "source": [
-    "print(p[indices[0][0]]*180/np.pi)"
+    "print(\"longitude shift = \", p[indices[0][0]]*180/np.pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 31,
    "id": "5d25bf37",
    "metadata": {},
    "outputs": [
@@ -802,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 32,
    "id": "dc12a03a",
    "metadata": {},
    "outputs": [],
@@ -821,8 +819,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "id": "ed0ad5d1",
+   "execution_count": 33,
+   "id": "2fbb7191",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 34,
    "id": "e88c6ca5",
    "metadata": {},
    "outputs": [
@@ -897,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 35,
    "id": "f753010a",
    "metadata": {},
    "outputs": [],
@@ -907,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 36,
    "id": "d7e8248d",
    "metadata": {},
    "outputs": [
@@ -938,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 37,
    "id": "f572118d",
    "metadata": {},
    "outputs": [],
@@ -954,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 38,
    "id": "f6d6c706",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 39,
    "id": "56796bf8",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 40,
    "id": "4d241f99",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 41,
    "id": "a5c86403",
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 42,
    "id": "12cecbc8",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 43,
    "id": "b2058878",
    "metadata": {},
    "outputs": [
@@ -1103,27 +1101,6 @@
     "_ = plt.tight_layout()\n",
     "\n",
     "plt.savefig(\"CrossCorrelation/figs/comparison-of-techniques-cc-np128.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "2410171f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(129, 140)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HUX_V.shape"
    ]
   },
   {
