--- a/HUX/SW-ROM-Shifted.ipynb
+++ b/HUX/SW-ROM-Shifted.ipynb
@@ -5,9 +5,9 @@
    "id": "5561eda5",
    "metadata": {},
    "source": [
-    "#### Last Modified: Nov 1st, 2021 (Opal). \n",
+    "#### Last Modified: Jan 5th, 2022 (Opal). \n",
     "\n",
-    "# Lagrangian OpInf on Solar Wind Radial Speed dataset\n"
+    "# S-OpInf on Solar Wind Radial Speed dataset\n"
    ]
   },
   {
@@ -74,25 +74,26 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d81c0c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(os.getcwd() + \"/code/\")\n",
+    "from numerical_methods import apply_numerical_method\n",
+    "from hux_propagation import apply_hux_f_model\n",
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "29234563",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'code.hux_propagation'; 'code' is not a package",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/tt/hgb4_vc13z77x5wpt5lzk5j40000gn/T/ipykernel_18205/680984060.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mcode\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mhux_propagation\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0;34m*\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mcode\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marchimedes_sprial\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mcompute_phi_shift_forward\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mcode\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mnumerical_methods\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mapply_numerical_method\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'code.hux_propagation'; 'code' is not a package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from code.hux_propagation import *\n",
-    "from code.archimedes_sprial import compute_phi_shift_forward\n",
-    "from code.numerical_methods import apply_numerical_method"
+    "#from code.hux_propagation import *\n",
+    "#from code.archimedes_sprial import compute_phi_shift_forward\n",
+    "#from code.numerical_methods import apply_numerical_method"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "36316ab2",
    "metadata": {},
    "outputs": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "09b5591e",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "88f864dc",
    "metadata": {},
    "outputs": [
@@ -235,10 +236,10 @@
      "evalue": "name 'apply_hux_f_model' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/tt/hgb4_vc13z77x5wpt5lzk5j40000gn/T/ipykernel_18205/2048458210.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mHUX_V\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mapply_hux_f_model\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minitial_condition\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mr_new\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0mr_new\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mvalue\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mp_new\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m-\u001B[0m\u001B[0mp_new\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m: name 'apply_hux_f_model' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/tt/hgb4_vc13z77x5wpt5lzk5j40000gn/T/ipykernel_18205/2048458210.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHUX_V\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_hux_f_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_condition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mr_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mr_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mp_new\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'apply_hux_f_model' is not defined"
      ]
     }
    ],
