update Burgers results.

--- a/CrossCorrelation/Cross-Correlation-Tutorial.ipynb
+++ b/CrossCorrelation/Cross-Correlation-Tutorial.ipynb
@@ -691,7 +691,7 @@
     "\n",
     "_ = cbar_ax.set_ylabel('km/s', rotation=90)\n",
     "\n",
-    "plt.savefig(\"CrossCorrelation/figs/2d-cc.png\")"
+    "plt.savefig(\"CrossCorrelation/figs/2d-cc.png\" , bbox_inches=\"tight\", dpi=600)"
    ]
   },
   {
