fix date of edit.

--- a/HUX/SW-ROM-Shifted-HUX-LowRes.ipynb
+++ b/HUX/SW-ROM-Shifted-HUX-LowRes.ipynb
@@ -5,7 +5,7 @@
    "id": "5561eda5",
    "metadata": {},
    "source": [
-    "#### Last Modified: Feb 14th, 2022 (Opal). \n",
+    "#### Last Modified: Feb 23rd, 2022 (Opal).\n",
     "\n",
     "# sOpInf on HUX Solar Wind Radial Speed Dataset for CR2210\n"
    ]
