Fix Burgers' equation shock formation (charcteristic curve).

--- a/CrossCorrelation/Cross-Correlation-Tutorial.ipynb
+++ b/CrossCorrelation/Cross-Correlation-Tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "aa943560",
    "metadata": {},
    "source": [
-    "##### Last modified: March 5th 2021 (Opal)\n",
+    "##### Last modified: July 24th, 2021 (Opal)\n",
     "\n",
     "# Cross-Correlation"
    ]
